clusters/platforms/gitea/templates/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-web
  namespace: gitea
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`git.platform.the-lab.zone`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  entryPoints:
    - gitea-ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gitea-ssh
          port: 22
